[package]
name = "uiuifree-image-convert"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["uiuifree"]
description = "My Image Convert Util"
license = "MIT"
keywords = ["image", "jpg", "png", "resize"]
[dependencies]
image = "0.24.1"
webp = "0.2.2"
sha3 = "0.10.1"
